--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 colored = "3.0.0"
 crossterm = "0.27"
 libc = "0.2.177"
-nix = "0.30.1"
 whoami = "1.6.1"
 
+nix = { version = "0.30.1", features = ["signal", "process"] }
